--- a/package.json
+++ b/package.json
@@ -2,15 +2,28 @@
   "name": "compare",
   "version": "0.1.0",
   "description": "Compare things",
-  "main": "src/compare.js",
-  "scripts": {
-    "test": "mocha"
-  },
+  "main": "dist/bundles/bundle.umd.js",
+  "module": "dist/bundles/bundle.esm.js",
   "type": "module",
+  "scripts": {
+    "test": "mocha",
+    "build": "npm-run-all build:*",
+    "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --out-dir 'dist/esm' --source-maps",
+    "build:cjs": "cross-env BABEL_ENV=cjs babel src --out-dir 'dist/cjs' --source-maps",
+    "build:bundles": "rollup -c rollup.config.js"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.16.7",
+    "@babel/core": "^7.16.7",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.1.2",
     "chai": "^4.3.4",
-    "mocha": "^9.1.3"
+    "cross-env": "^7.0.3",
+    "mocha": "^9.1.3",
+    "rollup": "^2.62.0",
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
