--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,8 +37,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./dist/index.js
-          asset_name: index.min.js
+          asset_path: ./dist/bundles/bundle.esm.min.js
+          asset_name: bundle.esm.min.js
           asset_content_type: text/javascript
       - name: Upload Release index.modern.js.gz
         uses: actions/upload-release-asset@v1
@@ -46,6 +46,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./dist/index.modern.js
-          asset_name: index.modern.min.js
+          asset_path: ./dist/bundles/bundle.umd.min.js
+          asset_name: bundle.umd.min.js
           asset_content_type: text/javascript
