--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "compare",
+  "name": "ekwal",
   "version": "0.1.1",
   "description": "Compare things",
   "main": "dist/bundles/bundle.umd.js",
   "module": "dist/bundles/bundle.esm.js",
-  "type": "module",
   "scripts": {
     "test": "mocha",
     "build": "npm-run-all build:*",
@@ -12,7 +11,9 @@
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --out-dir 'dist/cjs' --source-maps",
     "build:bundles": "rollup -c rollup.config.js"
   },
-  "author": "",
+  "author": "Raphaël JOIE",
+  "repository": "https://github.com/raphaeljoie/compare",
+  "homepage": "https://github.com/raphaeljoie/compare#compare-things",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.16.7",
@@ -23,6 +24,7 @@
     "chai": "^4.3.4",
     "cross-env": "^7.0.3",
     "mocha": "^9.1.3",
+    "npm-run-all": "^4.1.5",
     "rollup": "^2.62.0",
     "rollup-plugin-terser": "^7.0.2"
   }
