--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ekwal",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Compare things",
   "main": "dist/bundles/bundle.umd.js",
   "module": "dist/bundles/bundle.esm.js",
@@ -13,7 +13,7 @@
     "test": "mocha",
     "build": "npm-run-all build:*",
     "build:esm": "cross-env BABEL_ENV=esmUnbundled babel src --out-dir 'dist/esm' --source-maps",
-    "build:cjs": "cross-env BABEL_ENV=cjs babel src --out-dir 'dist/cjs' --source-maps",
+    "build:cjs": "babel src --plugins @babel/plugin-transform-modules-commonjs --out-dir 'dist/cjs' --source-maps",
     "build:bundles": "rollup -c rollup.config.js"
   },
   "author": "Raphaël JOIE",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/cli": "^7.16.7",
     "@babel/core": "^7.16.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.16.7",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.2",
